# Job-Finder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-tracker.yml
config/: profile.json  sources.json
data/: job_history.json  manual_jobs.json  user_feedback.json
reports/: latest.md  source_health.json
src/jobfinder/: __init__.py  alerts.py  cli.py  client.py  models.py  reporting.py  role_classification.py  scoring.py  sources.py  state.py  timing.py  tracker.py  web.py
tests/: test_discord_alerts.py  test_e2e_selection.py  test_multicompany.py  test_scoring.py  test_sources.py  test_tracker.py
tests/fixtures/: apple_careers.html  e2e_5_5_5_roles.json  e2e_shortage_company_cap.json  e2e_shortage_low_relevance.json  e2e_shortage_reach.json  google_careers.html  jobs.json
