[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bobby-job-finder"
version = "0.1.0"
description = "A strict, learning-value-first ByteDance opportunity tracker for Bobby Chen."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
job-finder = "jobfinder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
